@@ -5,14 +5,18 @@ import com.taxi.favorites.security.JwtTokenService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
+import org.springframework.security.web.util.matcher.RequestMatcher;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -22,8 +26,19 @@ public class SecurityConfig {
     private final JwtTokenService jwtTokenService;
 
     @Bean
+    public WebSecurityCustomizer healthEndpointIgnored() {
+        return web -> web.ignoring().requestMatchers(AntPathRequestMatcher.antMatcher(HttpMethod.GET, "/health"));
+    }
+
+    @Bean
     public JwtAuthenticationFilter jwtAuthenticationFilter() {
-        return new JwtAuthenticationFilter(jwtTokenService, List.of());
+        return new JwtAuthenticationFilter(jwtTokenService, Arrays.asList(publicApiMatchers()));
+    }
+
+    private static RequestMatcher[] publicApiMatchers() {
+        return new RequestMatcher[]{
+                AntPathRequestMatcher.antMatcher(HttpMethod.GET, "/health")
+        };
     }
 
     @Bean
@@ -31,7 +46,9 @@ public class SecurityConfig {
             throws Exception {
         http.csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> auth.anyRequest().authenticated())
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(publicApiMatchers()).permitAll()
+                        .anyRequest().authenticated())
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
