@@ -15,8 +15,9 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
+import org.springframework.security.web.util.matcher.RequestMatcher;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -32,16 +33,25 @@ public class SecurityConfig {
 
     @Bean
     public JwtAuthenticationFilter jwtAuthenticationFilter() {
-        return new JwtAuthenticationFilter(jwtTokenService, List.of(
+        return new JwtAuthenticationFilter(jwtTokenService, Arrays.asList(publicApiMatchers()));
+    }
+
+    /**
+     * Paths callable without Bearer (inter-service + login/register). Uses {@link AntPathRequestMatcher}
+     * so authorization works with multiple servlets (e.g. H2 console + DispatcherServlet).
+     */
+    private static RequestMatcher[] publicApiMatchers() {
+        return new RequestMatcher[]{
                 AntPathRequestMatcher.antMatcher("/auth/**"),
                 AntPathRequestMatcher.antMatcher(HttpMethod.POST, "/passengers"),
                 AntPathRequestMatcher.antMatcher(HttpMethod.POST, "/drivers"),
+                AntPathRequestMatcher.antMatcher(HttpMethod.POST, "/drivers/claim-available"),
                 AntPathRequestMatcher.antMatcher(HttpMethod.GET, "/passengers/*/exists"),
                 AntPathRequestMatcher.antMatcher(HttpMethod.GET, "/drivers/*/exists"),
                 AntPathRequestMatcher.antMatcher(HttpMethod.GET, "/drivers/available"),
                 AntPathRequestMatcher.antMatcher(HttpMethod.GET, "/drivers/available/list"),
                 AntPathRequestMatcher.antMatcher(HttpMethod.PATCH, "/drivers/*/status")
-        ));
+        };
     }
 
     @Bean
@@ -49,7 +59,9 @@ public class SecurityConfig {
             throws Exception {
         http.csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> auth.anyRequest().authenticated())
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(publicApiMatchers()).permitAll()
+                        .anyRequest().authenticated())
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
